src/test/deca/syntax/invalid/provided/class4.java
class A{
    int a ;
    float x;
    boolean b;
}

{
    A a = new A(5,5.3,true);
}